services/image-convert/kubernetes/image-convert.stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  # This name uniquely identifies the stateful set
  name: image-convert-stateful
  labels:
    app: image-convert
spec:
  serviceName: image-convert
  replicas: 1
  selector:
    matchLabels:
      app: image-convert
  template:
    metadata:
      labels:
        app: image-convert
    spec:
      containers:
      - name: image-convert
        image: ghcr.io/swiss-ai-center/core-engine-image-convert:latest
        # If you build the image locally, change the next line to `imagePullPolicy: Never` - there is no need to pull the image
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
